# STLio

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/: stl_model.h  stl_reader.h  stl_writer.h  stlio.h  stlio_reader.h  stlio_utils.h  stlio_writer.h  utils.h
src/: stl_model.cpp  stl_reader.cpp  stl_writer.cpp  stlio.cpp  stlio_reader.cpp  stlio_writer.cpp
src/parsers/: parser_ascii.cpp  parser_ascii.h  parser_binary.cpp  parser_binary.h
